# QuikMCAsset

./: .gitignore  CMakeLists.txt  README.md
inc/: rapidjson.hpp
src/: fileopertations.cpp  main.cpp
